--- a/media.html
+++ b/media.html
@@ -1,3 +1,203 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Media</title>
+<meta name="description" content="लोधा समाज शिक्षा फाउंडेशन
+।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
+We are dedicated to empower people with the tools and knowledge they need to reach their full potential. 
+">
+<meta name="keywords" content="Lodha Samaj, Shiksha Foundation, लोधा समाज शिक्षा फाउंडेशन, Career, Lodha Samaj Shiksha Foundation
+">
+<meta name="author" content="Vikas Lawvanshi">
+<meta name="robots" content="index, follow">
+<meta name="language" content="Hindi">
+<meta name="revisit-after" content="1 day">
+
+<meta property="og:title" content="Lodha Samaj Shiksha Foundation ">
+<meta property="og:description" content="लोधा समाज शिक्षा फाउंडेशन
+।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।। We are dedicated to empower people with the tools and knowledge they need to reach their full potential. ">
+<meta property="og:type" content="website">
+<meta property="og:image" content="images/Artboard 640xx.png">
+<meta property="og:image"itemprop="image"content="assets/icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="assets/favicon-64x64.png">
+    <link rel="icon" type="image/png" sizes="114x114" href="assets/Asset114x(Copy).png">
+    <link rel="icon" type="image/png" sizes="152x152" href="assets/Asset152x.png">
+    <link rel="icon" type="image/png" sizes="167x167" href="assets/Asset167x.png">
+	<link rel="icon" type="image/png" sizes="180x180" href="assets/Asset180x.png">
+	<link rel="icon" type="image/png" sizes="640x640" href="assets/Artboard 640xx.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Lodha Samaj Shiksha Foundation">
+<meta name="twitter:description" content="लोधा समाज शिक्षा फाउंडेशन
+।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।। We are dedicated to empower people with the tools and knowledge they need to reach their full potential.">
+<meta name="twitter:image" content="images/Artboard 640xx.png">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link href="16x16.png" rel="icon" sizes="16x16" type="image/png">
+<link href="32x32.png" rel="icon" sizes="32x32" type="image/png">
+<link href="64x64.png" rel="icon" sizes="64x64" type="image/png">
+<link href="120x120.png" rel="apple-touch-icon" sizes="120x120">
+<link href="320x320.png" rel="apple-touch-icon" sizes="320x320">
+<link href="Artboard 1@0.75x.png" rel="apple-touch-icon" sizes="643x654">
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Yatra+One:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gotu:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Arya:400&subset=devanagari&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Comic+Neue:400,700,300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Zen+Loop:400&subset=latin-ext&display=swap" rel="stylesheet">
+<link href="css/LN_phase13.css" rel="stylesheet">
+<link href="css/media.css" rel="stylesheet">
+
+</head>
+<body>
+<div id="wb_LayoutGrid1">
+<div id="LayoutGrid1">
+<div class="row">
+<div class="col-1">
+</div>
+</div>
+</div>
+</div>
+<div id="wb_LayoutGrid6">
+<div id="LayoutGrid6">
+<div class="row">
+<div class="col-1">
+</div>
+<div class="col-2">
+</div>
+<div class="col-3">
+</div>
+</div>
+</div>
+</div>
+<div id="wb_LayoutGrid2">
+<div id="LayoutGrid2">
+<div class="row">
+<div class="col-1">
+<div id="wb_Image1" style="display:inline-block;width:203px;height:201px;z-index:1;">
+<a href="./index.html"><img src="images/Asset 2@1.5x.png" loading="lazy" id="Image1" alt="" width="203" height="202"></a>
+</div>
+<div id="wb_Text3">
+<p>।। एक कल्पवृक्ष, जो&nbsp; संभावनाओ को साकार करे ।।</p>
+<br>
+</div>
+<div id="wb_Heading1" style="display:inline-block;width:100%;z-index:3;">
+<h1 id="Heading1"><a href="./index.html">Lodha Samaj Shiksha Foundation</a></h1>
+</div>
+<div id="wb_Text1">
+<p>पंजीयन क्रमांक&nbsp;03/27/01/23587/21</p>
+<p>PAN : AACAL8732B</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="upStickyLayer" style="position:fixed;text-align:center;left:auto;right:20px;top:auto;bottom:20px;width:58px;height:76px;z-index:11;">
+<div id="upStickyLayer_Container" style="width:58px;position:relative;margin-left:auto;margin-right:auto;text-align:left;">
+<div id="wb_Image4" style="position:absolute;left:0px;top:12px;width:58px;height:64px;z-index:5;">
+<a href="./header_masterpage.html#Bookmark1"><img src="images/Artboard 1@0.75x.png" loading="lazy" id="Image4" alt="" width="58" height="59"></a></div>
+<div id="wb_Icon3" style="position:absolute;left:16px;top:0px;width:27px;height:23px;text-align:center;z-index:6;">
+<a href="./header_masterpage.html#Bookmark1"><div id="Icon3"><i class="fa fa-arrow-circle-up"></i></div></a></div>
+</div>
+</div>
+<div id="wb_LayoutGrid4">
+<div id="LayoutGrid4">
+<div class="row">
+<div class="col-1">
+</div>
+<div class="col-2">
+</div>
+<div class="col-3">
+</div>
+</div>
+</div>
+</div>
+<div id="wb_LayoutGrid3">
+<div id="LayoutGrid3">
+<div class="row">
+<div class="col-1">
+</div>
+</div>
+</div>
+</div>
+<div id="wb_LayoutGrid5">
+<div id="LayoutGrid5">
+<div class="row">
+<div class="col-1">
+<div id="wb_ResponsiveMenu1" style="display:inline-block;width:100%;z-index:7;">
+<label class="toggle" for="ResponsiveMenu1-submenu" id="ResponsiveMenu1-title">लोधा समाज शिक्षा फाउंडेशन<span id="ResponsiveMenu1-icon"><span>&nbsp;</span><span>&nbsp;</span><span>&nbsp;</span></span></label>
+<input type="checkbox" id="ResponsiveMenu1-submenu">
+<ul class="ResponsiveMenu1" id="ResponsiveMenu1" role="menu">
+<li role="menuitem"><a href="./index.html" class="nav-link"><i class="fa fa-home fa-2x">&nbsp;</i><br>Home</a></li>
+<li role="menuitem">
+<label for="ResponsiveMenu1-submenu-0" class="toggle"><i class="fa fa-users fa-2x">&nbsp;</i>About&nbsp;&nbsp;Us<b class="arrow-down"></b></label>
+<a href="javascript:void(0)" class="nav-link"><i class="fa fa-users fa-2x">&nbsp;</i><br>About&nbsp;&nbsp;Us<b class="arrow-down"></b></a>
+<input type="checkbox" id="ResponsiveMenu1-submenu-0">
+<ul role="menu">
+<li role="menuitem"><a href="https://hi.wikipedia.org/wiki/%E0%A4%B2%E0%A5%8B%E0%A4%A7%E0%A4%BE" class="nav-link"><i class="fa fa-question-circle-o fa-2x">&nbsp;</i>Who&nbsp;We&nbsp;Are(History&nbsp;of&nbsp;Lodha)</a></li>
+<li role="menuitem"><a href="./vision&mission.html" class="nav-link"><i class="fa fa-hand-peace-o fa-2x">&nbsp;</i>Vision&amp;Mission</a></li>
+<li role="menuitem"><a href="./History-Journey.html" class="nav-link"><i class="fa fa-hourglass-end fa-2x">&nbsp;</i>History&nbsp;of&nbsp;Shiksha&nbsp;Foundation</a></li>
+<li role="menuitem"><a href="./media.html" class="nav-link"><i class="fa fa-file-image-o fa-2x">&nbsp;</i>Media</a></li>
+<li role="menuitem"><a href="./Lists.html" class="nav-link"><i class="fa fa-suitcase fa-2x">&nbsp;</i>Lists/Reports</a></li>
+<li role="menuitem"><a href="./underconstruction.html" class="nav-link"><i class="fa fa-handshake-o fa-2x">&nbsp;</i>&nbsp;Our&nbsp;Partners</a></li>
+</ul>
+</li>
+<li role="menuitem">
+<label for="ResponsiveMenu1-submenu-1" class="toggle"><i class="fa fa-sitemap fa-2x">&nbsp;</i>Career/Job<b class="arrow-down"></b></label>
+<a href="javascript:void(0)" class="nav-link"><i class="fa fa-sitemap fa-2x">&nbsp;</i><br>Career/Job<b class="arrow-down"></b></a>
+<input type="checkbox" id="ResponsiveMenu1-submenu-1">
+<ul role="menu">
+<li role="menuitem"><a href="https://www.ncs.gov.in/content-repository/Pages/BrowseBySectors.aspx" title="Career Exploration" class="nav-link"><i class="fa fa-search fa-2x">&nbsp;</i>Career&nbsp;Exploration</a></li>
+<li role="menuitem"><a href="./directory.html" class="nav-link"><i class="fa fa-shopping-cart fa-2x">&nbsp;</i>School/College/Hostel&nbsp;Directory</a></li>
+<li role="menuitem"><a href="./Career Timelines.html" class="nav-link"><i class="fa fa-code-fork fa-2x">&nbsp;</i>Career&nbsp;Timeline</a></li>
+<li role="menuitem"><a href="./Job.html" class="nav-link"><i class="fa fa-futbol-o fa-2x">&nbsp;</i>Job</a></li>
+<li role="menuitem"><a href="./study-material.html" class="nav-link"><i class="fa fa-slideshare fa-2x">&nbsp;</i>Study&nbsp;Material&nbsp;&amp;&nbsp;Companion</a></li>
+<li role="menuitem"><a href="./Events&Workshop.html" class="nav-link"><i class="fa fa-calendar fa-2x">&nbsp;</i>Briefings,&nbsp;Events&nbsp;&amp;&nbsp;Workshops</a></li>
+<li role="menuitem"><a href="./underconstruction.html" class="nav-link"><i class="fa fa-bullhorn fa-2x">&nbsp;</i>Admission&nbsp;&amp;&nbsp;Exam&nbsp;Alerts</a></li>
+<li role="menuitem"><a href="./underconstruction.html" class="nav-link"><i class="fa fa-universal-access fa-2x">&nbsp;</i>Parental&nbsp;Guidance</a></li>
+<li role="menuitem"><a href="./underconstruction.html" class="nav-link"><i class="fa fa-dropbox fa-2x">&nbsp;</i>Others</a></li>
+</ul>
+</li>
+<li role="menuitem">
+<label for="ResponsiveMenu1-submenu-2" class="toggle"><i class="fa fa-gears fa-2x">&nbsp;</i>Toolkit<b class="arrow-down"></b></label>
+<a href="javascript:void(0)" class="nav-link"><i class="fa fa-gears fa-2x">&nbsp;</i><br>Toolkit<b class="arrow-down"></b></a>
+<input type="checkbox" id="ResponsiveMenu1-submenu-2">
+<ul role="menu">
+<li role="menuitem"><a href="./Education-tools.html" target="_blank" class="nav-link"><i class="fa fa-book fa-2x">&nbsp;</i>Education</a></li>
+<li role="menuitem"><a href="./Web-Tools.html" target="_blank" class="nav-link"><i class="fa fa-globe fa-2x">&nbsp;</i>Web</a></li>
+<li role="menuitem"><a href="./Developer-tools.html" class="nav-link"><i class="fa fa-code fa-2x">&nbsp;</i>Developer&apos;s</a></li>
+<li role="menuitem"><a href="./Social-Media-Tools.html" class="nav-link"><i class="fa fa-wechat fa-2x">&nbsp;</i>Social&nbsp;Media</a></li>
+<li role="menuitem"><a href="./OS-tools.html" class="nav-link"><i class="fa fa-desktop fa-2x">&nbsp;</i>OS(Windows,&nbsp;Linux,&nbsp;Apple,&nbsp;Android)</a></li>
+<li role="menuitem"><a href="./Privacy-tools.html" class="nav-link"><i class="fa fa-key fa-2x">&nbsp;</i>Privacy</a></li>
+<li role="menuitem"><a href="./Productivity-tools.html" class="nav-link"><i class="fa fa-calendar-check-o fa-2x">&nbsp;</i>Productivity</a></li>
+<li role="menuitem"><a href="https://osintframework.com/" target="_blank" class="nav-link"><i class="fa fa-user-secret fa-2x">&nbsp;</i>OSINT&nbsp;framework</a></li>
+<li role="menuitem"><a href="./Other-Tools.html" class="nav-link"><i class="fa fa-pied-piper-alt fa-2x">&nbsp;</i>Others</a></li>
+</ul>
+</li>
+<li role="menuitem"><a href="./Committee.html" class="nav-link"><i class="fa fa-address-card-o fa-2x">&nbsp;</i><br>Committee</a></li>
+</ul>
+
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="wb_Bookmark1" style="position:absolute;left:1px;top:0px;width:20px;height:20px;z-index:0;">
+<div id="Bookmark1" style="visibility:hidden;"></div>
+</div>
+
+<div id="wb_LayoutGrid10">
+<div id="LayoutGrid10-overlay"></div>
+<div id="LayoutGrid10">
+<div class="row">
+<div class="col-1">
+</div>
+</div>
+</div>
+</div>
+
 <div id="wb_LayoutGrid7">
     <div id="LayoutGrid7">
     <div class="row">
