--- a/media.html
+++ b/media.html
@@ -213,7 +213,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <div class="row">
         <div class="col-1">
         <div id="wb_Image9" style="display:inline-block;width:100%;height:auto;z-index:37;">
-        <a href="https://drive.google.com/drive/folders/14T1z80F-xH6n4WGN4NcEBg4OUQj9eEB7?usp=sharing"><img src="images/newspaper-advertisement-service-500x500.png" id="Image9" alt="" title="2024" width="890" height="549"></a>
+        <a href="https://drive.google.com/drive/folders/14T1z80F-xH6n4WGN4NcEBg4OUQj9eEB7?usp=sharing"><img src="images/newspaper-advertisement-service-500x500.jpg" id="Image9" alt="" title="2024" width="890" height="549"></a>
         </div>
         <div id="wb_Text16">
         <p>Press News Paper Cuttings</p>
