--- a/media.html
+++ b/media.html
@@ -417,6 +417,15 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 </div>
 
+<div id="wb_LayoutGrid62">
+<div id="LayoutGrid62">
+<div class="row">
+<div class="col-1">
+</div>
+</div>
+</div>
+</div>
+	
 <div id="wb_LayoutGrid54">
     <div id="LayoutGrid54">
     <div class="row">
