--- a/media.html
+++ b/media.html
@@ -255,14 +255,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
     </div>
     </div>
 
-<div id="wb_LayoutGrid7">
-    <div id="LayoutGrid7">
-    <div class="row">
-    <div class="col-1">
-    </div>
-    </div>
-    </div>
-    </div>
+
     <div id="wb_LayoutGrid7">
         <div id="LayoutGrid7">
         <div class="row">
@@ -299,19 +292,12 @@ We are dedicated to empower people with the tools and knowledge they need to rea
     </div>
     </div>
     </div>
-<div id="wb_LayoutGrid7">
-        <div id="LayoutGrid7">
-        <div class="row">
-        <div class="col-1">
-        </div>
-        </div>
-        </div>
-        </div>
+
 <div id="wb_Text6">
 <p>भूमि पूजन 2023</p>
 </div>
 <div id="wb_Text7">
-<p><a href="https://youtu.be/YaxvqjrLuiY">Click here </a>to see full Album</p>
+<p><a href="https://youtu.be/YaxvqjrLuiY">Click here </a>to see video</p>
 </div>
 </div>
 </div>
@@ -391,14 +377,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
     </div>
     </div>
 
-<div id="wb_LayoutGrid62">
-<div id="LayoutGrid62">
-<div class="row">
-<div class="col-1">
-</div>
-</div>
-</div>
-</div>
+
 <div id="wb_LayoutGrid65">
 <div id="LayoutGrid65">
 <div class="row">
@@ -417,8 +396,8 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 </div>
 
-<div id="wb_LayoutGrid62">
-<div id="LayoutGrid62">
+<div id="wb_LayoutGrid7">
+<div id="LayoutGrid7">
 <div class="row">
 <div class="col-1">
 </div>
