--- a/media.html
+++ b/media.html
@@ -276,7 +276,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <div class="row">
         <div class="col-1">
         <div id="wb_YouTube1" style="display:inline-block;width:100%;z-index:36;">
-        <iframe id="YouTube1" src="https://youtu.be/92GOAOFmkO4?rel=0&amp;enablejsapi=1&amp;autohide=0" loading="lazy"></iframe>
+        <iframe id="YouTube1" src="https://youtu.be/92GOAOFmkO4?si=FMLL44CDrnNmsyfb?rel=0&amp;enablejsapi=1&amp;autohide=0" loading="lazy"></iframe>
         
         </div>
         </div>
@@ -352,7 +352,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <div class="row">
         <div class="col-1">
         <div id="wb_YouTube1" style="display:inline-block;width:100%;z-index:36;">
-        <iframe id="YouTube1" src="https://youtu.be/5CWc9bqRBUM?rel=0&amp;enablejsapi=1&amp;autohide=0" loading="lazy"></iframe>
+        <iframe id="YouTube1" src="https://youtu.be/5CWc9bqRBUM?si=SKO11AkHoVR7Xwsq?rel=0&amp;enablejsapi=1&amp;autohide=0" loading="lazy"></iframe>
         
         </div>
         </div>
@@ -372,9 +372,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 
 <div id="wb_Text6">
 <p>भूमि पूजन 2023</p>
-</div>
-<div id="wb_Text7">
-<p><a href="https://youtu.be/YaxvqjrLuiY">Click here </a>to see video</p>
 </div>
 </div>
 </div>
