--- a/media.html
+++ b/media.html
@@ -276,7 +276,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <div class="row">
         <div class="col-1">
         <div id="wb_YouTube1" style="display:inline-block;width:100%;z-index:36;">
-        <iframe id="YouTube1" src="https://youtu.be/92GOAOFmkO4?si=FMLL44CDrnNmsyfb?rel=0&amp;enablejsapi=1&amp;autohide=0" loading="lazy"></iframe>
+        <iframe id="YouTube1" src="https://www.youtube.com/embed/92GOAOFmkO4?si=QT7e54G2YP7YlKgi?rel=0&amp;enablejsapi=1&amp;autohide=0" loading="lazy"></iframe>
         </div>
         </div>
         </div>
@@ -350,7 +350,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <div class="row">
         <div class="col-1">
         <div id="wb_YouTube1" style="display:inline-block;width:100%;z-index:36;">
-        <iframe id="YouTube1" src="https://youtu.be/5CWc9bqRBUM?si=SKO11AkHoVR7Xwsq?rel=0&amp;enablejsapi=1&amp;autohide=0" loading="lazy"></iframe>
+        <iframe id="YouTube1" src="https://www.youtube.com/embed/5CWc9bqRBUM?si=fFgIKp3oyvgU_SNJ?rel=0&amp;enablejsapi=1&amp;autohide=0" loading="lazy"></iframe>
         </div>
         </div>
         </div>
