--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
 We are dedicated to empower people with the tools and knowledge they need to reach their full potential. 
 ">
-<meta name="keywords" content="Lodha Samaj, Shiksha Foundation, लोधा समाज शिक्षा फाउंडेशन, Career, Lodha Samaj Shiksha Foundation, Vikas Lawvanshi, Ramgopal Lawvanshi
+<meta name="keywords" content="Lodha Samaj, Shiksha Foundation, लोधा समाज शिक्षा फाउंडेशन, Career, Lodha Samaj Shiksha Foundation, LSSF, Vikas Lawvanshi, Ramgopal Lawvanshi
 ">
 <meta name="author" content="Vikas Lawvanshi">
 <meta name="robots" content="index, follow">
@@ -166,7 +166,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <li role="menuitem"><a href="./study-material.html" class="nav-link"><i class="fa fa-slideshare fa-2x">&nbsp;</i>Study&nbsp;Material&nbsp;&amp;&nbsp;Companion</a></li>
 <li role="menuitem"><a href="./Events&Workshop.html" class="nav-link"><i class="fa fa-calendar fa-2x">&nbsp;</i>Briefings,&nbsp;Events&nbsp;&amp;&nbsp;Workshops</a></li>
 <li role="menuitem"><a href="./underconstruction.html" class="nav-link"><i class="fa fa-bullhorn fa-2x">&nbsp;</i>Admission&nbsp;&amp;&nbsp;Exam&nbsp;Alerts</a></li>
-<li role="menuitem"><a href="./underconstruction.html" class="nav-link"><i class="fa fa-universal-access fa-2x">&nbsp;</i>Parental&nbsp;Guidance</a></li>
+<li role="menuitem"><a href="./parental guidance.html" class="nav-link"><i class="fa fa-universal-access fa-2x">&nbsp;</i>Parental&nbsp;Guidance</a></li>
 <li role="menuitem"><a href="./underconstruction.html" class="nav-link"><i class="fa fa-dropbox fa-2x">&nbsp;</i>Others</a></li>
 </ul>
 </li>
@@ -527,7 +527,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="wb_Image18" style="display:inline-block;width:100%;height:auto;z-index:81;">
 <a href="./underconstruction.html"><img src="images/pngkey.com-explicit-content-png-4386721.png" loading="lazy" id="Image18" alt="" width="263" height="194"></a>
 </div>
-<a id="Button22" href="./underconstruction.html" style="display:block;width: 100%;;height:49px;z-index:82;">Parental Guidance</a>
+<a id="Button22" href="./parental guidance.html" style="display:block;width: 100%;;height:49px;z-index:82;">Parental Guidance</a>
 </div>
 </div>
 </div>
@@ -1269,17 +1269,15 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 <div class="col-2">
 <div id="wb_Text27">
-<p>Ramkishor Lowanshi </p>
+<p>Sunil Sadh</p>
 </div>
 <div id="wb_Text28">
 <p>सचिव</p>
 </div>
 <div id="wb_Text29">
-<p>+919826642707 <a href="tel:+919826642707 ">🧲</a></p>
+<p>+919977994298 <a href="tel:+919977994298 ">🧲</a></p>
 </div>
-<div id="wb_Text30">
-<p>rk.lovenshi@gmail.com</p>
-</div>
+
 </div>
 </div>
 </div>
