--- a/parental guidance.html
+++ b/parental guidance.html
@@ -200,7 +200,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading2" style="display:inline-block;width:100%;z-index:15;">
-<h2 id="Heading2"><a href="./History-Journey.html">Parental Guidance</a></h2>
+<h2 id="Heading2"><a href="./parental guidance.html">Parental Guidance</a></h2>
 </div>
 </div>
 </div>
@@ -215,7 +215,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading3" style="display:inline-block;width:100%;z-index:16;">
-<h2 id="Heading3"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vS1qs_hPpi0qIJbTlQoaeen_GQ5fSHA8RfImo4SfTKOhfqSDWEiFvLJljp083P1IsNVo2c_SX0Sus8h/pubhtml">Bio-Data for Marriage Match-making 🤵🏻💞👰</a></h2>
+<h2 id="Heading3"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vS1qs_hPpi0qIJbTlQoaeen_GQ5fSHA8RfImo4SfTKOhfqSDWEiFvLJljp083P1IsNVo2c_SX0Sus8h/pubhtml">Bio-Data for Marriage Match-making 🤵🏻💞👰<img src="images/match making.webp" id="Image6" alt="" title="Marriage" width="212" height="300"></a></h2>
 </div>
 </div>
 </div>
