--- a/Events&Workshop.html
+++ b/Events&Workshop.html
@@ -19,6 +19,8 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।। We are dedicated to empower people with the tools and knowledge they need to reach their full potential. ">
 <meta property="og:type" content="website">
 <meta property="og:image" content="images/Artboard 640xx.png">
+	<meta property="og:image:width" content="512" />
+	<meta property="og:image:height" content="500" />
 <meta property="og:image"itemprop="image"content="assets/icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
@@ -343,17 +345,15 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 <div class="col-2">
 <div id="wb_Text27">
-<p>Ramkishor Lowanshi </p>
+<p>Sunil Sadh </p>
 </div>
 <div id="wb_Text28">
 <p>सचिव</p>
 </div>
 <div id="wb_Text29">
-<p>+919826642707 <a href="tel:+919826642707 ">🧲</a></p>
+<p>+919977994298 <a href="tel:+919977994298 ">🧲</a></p>
 </div>
-<div id="wb_Text30">
-<p>rk.lovenshi@gmail.com</p>
-</div>
+
 </div>
 </div>
 </div>
