--- a/vision-mission-objectives.html
+++ b/vision-mission-objectives.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Study Material & Companion</title>
-<meta name="description" content="Companion Guides are designed to reinforce online course material, helping students focus on important concepts and organize their study time.
-We are dedicated to empower people with the tools and knowledge they need to reach their full potential. लोधा समाज शिक्षा फाउंडेशन ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  ">
+<title>Vision-Mission-objectives_LSSF</title>
+<meta name="description" content="लोधा समाज शिक्षा फाउंडेशन ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  We are dedicated to empower people with the tools and knowledge they need to reach their full potential. ">
 <meta name="keywords" content="Lodha Samaj, Shiksha Foundation, लोधा समाज शिक्षा फाउंडेशन, Career, Lodha Samaj Shiksha Foundation, LSSF, Vikas Lawvanshi, Ramgopal Lawvanshi">
 <meta name="author" content="Vikas Lawvanshi">
 <meta name="robots" content="index, follow">
@@ -33,17 +32,16 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <link href="16x16.png" rel="icon" sizes="16x16" type="image/png">
 <link href="32x32.png" rel="icon" sizes="32x32" type="image/png">
 <link href="64x64.png" rel="icon" sizes="64x64" type="image/png">
-<link href="120x120.png" rel="apple-touch-icon" sizes="120x120">
-<link href="320x320.png" rel="apple-touch-icon" sizes="320x320">
 <link href="logo152x152.png" rel="apple-touch-icon" sizes="152x152">
 <link href="logo167x167.png" rel="apple-touch-icon" sizes="167x167">
 <link href="logo180x180.png" rel="apple-touch-icon" sizes="180x180">
+<link href="logo512x512.png" rel="apple-touch-icon" sizes="512x512">
 <link href="css/font-awesome.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Gotu&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Arya&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Comic+Neue&display=swap" rel="stylesheet">
 <link href="css/LN_phase12.css" rel="stylesheet">
-<link href="css/study-material.css" rel="stylesheet">
+<link href="css/vision-mission-objectives.css" rel="stylesheet">
 
 </head>
 <body>
@@ -183,81 +181,10 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="Bookmark1" style="visibility:hidden;"></div>
 </div>
 
-<div id="wb_LayoutGrid29">
-<div id="LayoutGrid29">
-<div class="row">
-<div class="col-1">
-</div>
-<div class="col-2">
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid10">
-<div id="LayoutGrid10">
-<div class="row">
-<div class="col-1">
-<div id="wb_Heading7" style="display:inline-block;width:100%;z-index:15;">
-<h2 id="Heading7"><a href="./study-material.html">Study Material</a></h2>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid27">
-<div id="LayoutGrid27">
-<div class="row">
-<div class="col-1">
-<div id="wb_LayoutGrid12">
-<div id="LayoutGrid12">
-<div class="col-1">
-<div id="wb_Heading2" style="display:inline-block;width:100%;z-index:16;">
-<h2 id="Heading2">CBSE</h2>
-</div>
-<div id="wb_Image6" style="display:inline-block;width:100%;height:auto;z-index:17;">
-<a href="./CBSE.html"><img src="images/cbseee.jpg" id="Image6" alt="" title="CBSE"></a>
-</div>
-<div id="wb_Image5" style="display:inline-block;width:100%;height:auto;z-index:18;">
-<img src="cbse.webp" id="Image5" alt="" width="906" height="530">
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
 <div id="wb_LayoutGrid11">
 <div id="LayoutGrid11">
 <div class="row">
 <div class="col-1">
-</div>
-<div class="col-2">
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid15">
-<div id="LayoutGrid15">
-<div class="row">
-<div class="col-1">
-<div id="wb_LayoutGrid13">
-<div id="LayoutGrid13">
-<div class="row">
-<div class="col-1">
-<div id="wb_Heading3" style="display:inline-block;width:100%;z-index:20;">
-<h2 id="Heading3">MP Board</h2>
-</div>
-<div id="wb_Image3" style="display:inline-block;width:100%;height:auto;z-index:21;">
-<a href="./MP-board.html"><img src="images/iuhqkenl.png" id="Image3" alt="" title="MP"></a>
-</div>
-<div id="wb_Image7" style="display:inline-block;width:100%;height:auto;z-index:22;">
-<img src="mpboard.webp" id="Image7" alt="" width="906" height="612">
-</div>
-</div>
-</div>
-</div>
-</div>
 </div>
 </div>
 </div>
@@ -266,45 +193,56 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="LayoutGrid7">
 <div class="row">
 <div class="col-1">
-<div id="wb_Heading4" style="display:inline-block;width:100%;z-index:30;">
-<h2 id="Heading4">Other Resources & Companions</h2>
+<div id="wb_Image3" style="display:inline-block;width:100%;height:auto;z-index:15;">
+<img src="vision_mission.webp" id="Image3" alt="" width="890" height="593">
 </div>
 </div>
 </div>
 </div>
 </div>
-<div id="wb_LayoutGrid8">
-<div id="LayoutGrid8">
-<div class="col-1">
-<div id="wb_Image2" style="display:inline-block;width:100%;height:auto;z-index:32;">
-<a href="./CBSE.html"><img src="images/cbseee.jpg" id="Image2" alt="" title="CBSE"></a>
-</div>
-<div id="wb_LayoutGrid31">
-<div id="LayoutGrid31">
+<div id="wb_LayoutGrid12">
+<div id="LayoutGrid12">
 <div class="row">
 <div class="col-1">
-<iframe width='100%' height='300' src="https://docs.google.com/document/d/e/2PACX-1vQmopreTiD_F_SqKCxC6rMkBtjlekYsBPe_-PO39KTrhbLFH_xZF-DW7EOTW4Bpd-KcI8xYpWIM9X9h/pub?embedded=true"></iframe>
+<div id="wb_Heading4" style="display:inline-block;width:100%;z-index:16;">
+<h2 id="Heading4"><a href="./vision-mission-objectives.html" title="संस्था के उद्देश्य">संस्था के उद्देश्य</a></h2>
 </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div id="wb_LayoutGrid9">
-<div id="LayoutGrid9">
-<div class="row">
-<div class="col-1">
 </div>
 </div>
 </div>
 </div>
 <div id="wb_LayoutGrid14">
-<div id="LayoutGrid14-overlay"></div>
 <div id="LayoutGrid14">
 <div class="row">
 <div class="col-1">
-<hr id="HorizontalLine5" style="display:block;width: 100%;z-index:35;">
+<div id="wb_LayoutGrid15">
+<div id="LayoutGrid15">
+<div class="col-1">
+<div id="wb_Image5" style="display:inline-block;width:100%;height:auto;z-index:17;">
+<a href="./CBSE.html"><img src="images/cbseee.jpg" id="Image5" alt="" title="CBSE"></a>
+</div>
+<iframe width='100%' height='300' src="https://docs.google.com/document/d/e/2PACX-1vR8uyNk_091aChnACruLbebGQEb0WkOSOlhX-fS_QymiG3aRf61OeaLRjObqZXD5ww7O9NPi8AWItOR/pub?embedded=true"></iframe>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="wb_LayoutGrid16">
+<div id="LayoutGrid16">
+<div class="row">
+<div class="col-1">
+</div>
+</div>
+</div>
+</div>
+<div id="wb_LayoutGrid10">
+<div id="LayoutGrid10-overlay"></div>
+<div id="LayoutGrid10">
+<div class="row">
+<div class="col-1">
+<hr id="HorizontalLine5" style="display:block;width: 100%;z-index:22;">
 </div>
 </div>
 </div>
@@ -313,7 +251,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="LayoutGrid55">
 <div class="row">
 <div class="col-1">
-<div id="wb_Heading15" style="display:inline-block;width:137px;height:33px;z-index:36;">
+<div id="wb_Heading15" style="display:inline-block;width:137px;height:33px;z-index:23;">
 <h1 id="Heading15">सूचना:- </h1>
 </div>
 </div>
@@ -335,7 +273,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="LayoutGrid57">
 <div class="row">
 <div class="col-1">
-<hr id="HorizontalLine6" style="display:block;width: 100%;z-index:38;">
+<hr id="HorizontalLine6" style="display:block;width: 100%;z-index:25;">
 </div>
 </div>
 </div>
@@ -349,10 +287,10 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <form name="SiteSearch2_form" id="SiteSearch2_form" role="search" accept-charset="UTF-8" onsubmit="return searchPage(features)"></form>
-<input type="text" id="SiteSearch2" style="display:block;width: 100%;height:26px;z-index:39;" name="SiteSearch1" value="" spellcheck="false" placeholder="Search this website" role="searchbox" form="SiteSearch2_form">
+<input type="text" id="SiteSearch2" style="display:block;width: 100%;height:26px;z-index:26;" name="SiteSearch1" value="" spellcheck="false" placeholder="Search this website" role="searchbox" form="SiteSearch2_form">
 </div>
 <div class="col-2">
-<input type="button" id="Button11" onclick="searchPage();return false;" name="Search" value="Search" style="display:block;width: 100%;;height:25px;z-index:40;">
+<input type="button" id="Button11" onclick="searchPage();return false;" name="Search" value="Search" style="display:block;width: 100%;;height:25px;z-index:27;">
 </div>
 </div>
 </div>
@@ -364,10 +302,10 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="wb_LayoutGrid60">
 <div id="LayoutGrid60">
 <div class="col-1">
-<div id="wb_Heading16" style="display:inline-block;width:100%;z-index:44;">
+<div id="wb_Heading16" style="display:inline-block;width:100%;z-index:31;">
 <h2 id="Heading16">Connect With Us!</h2>
 </div>
-<div id="wb_ListView2" style="display:inline-block;width:100%;z-index:45;">
+<div id="wb_ListView2" style="display:inline-block;width:100%;z-index:32;">
 <ul id="ListView2">
    <li class="ui-li-has-icon ui-first-child"><a href="mailto:lodhasamajshikshafoundation@gmail.com" class="ui-state-default ui-btn"><img src="mail.webp" class="ui-li-icon">Mail<p>lodhasamajshikshafoundation@gmail.com</p></a></li>
    <li class="ui-li-has-icon"><a href="https://chat.whatsapp.com/INQZ8XYS4sRJtOxzzetpSV" class="ui-state-default ui-btn"><img src="whatsapp.webp" class="ui-li-icon">Whatsapp Community<p>Support and Suggestion group for Our Work</p></a></li>
@@ -381,7 +319,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="wb_LayoutGrid61">
 <div id="LayoutGrid61">
 <div class="col-1">
-<div id="wb_Image22" style="display:inline-block;width:44px;height:40px;z-index:46;">
+<div id="wb_Image22" style="display:inline-block;width:44px;height:40px;z-index:33;">
 <img src="call_us.webp" id="Image22" alt="" width="44" height="40">
 </div>
 </div>
@@ -395,7 +333,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="wb_LayoutGrid62">
 <div id="LayoutGrid62">
 <div class="col-1">
-<div id="wb_Image21" style="display:inline-block;width:47px;height:59px;z-index:48;">
+<div id="wb_Image21" style="display:inline-block;width:47px;height:59px;z-index:35;">
 <img src="papa.webp" id="Image21" alt="founder of lodha samaj shiksha foundation" title="Ramgopal Lawvanshi" width="47" height="59">
 </div>
 </div>
@@ -411,17 +349,17 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 </div>
 <div class="col-3">
-<div id="wb_Image45" style="display:inline-block;width:100%;height:auto;z-index:52;">
+<div id="wb_Image45" style="display:inline-block;width:100%;height:auto;z-index:39;">
 <a href="https://wa.me/919893768188?text=%EA%A7%81%F0%9F%9A%A9%E0%A4%9C%E0%A4%AF%E0%A4%B6%E0%A5%8D%E0%A4%B0%E0%A5%80%20%E0%A4%B0%E0%A4%BE%E0%A4%AE%F0%9F%9A%A9%EA%A7%82"><img src="whatsapp.webp" id="Image45" alt="" width="27" height="27"></a>
 </div>
 </div>
 <div class="col-4">
-<div id="wb_Image40" style="display:inline-block;width:100%;height:auto;z-index:53;">
+<div id="wb_Image40" style="display:inline-block;width:100%;height:auto;z-index:40;">
 <a href="https://www.facebook.com/ramgopal.lawvanshi.7?mibextid=ZbWKwL"><img src="images/facebook.png" id="Image40" alt="" width="27" height="27"></a>
 </div>
 </div>
 <div class="col-5">
-<div id="wb_Image48" style="display:inline-block;width:100%;height:auto;z-index:54;">
+<div id="wb_Image48" style="display:inline-block;width:100%;height:auto;z-index:41;">
 <a href="mailto:rglawvanshi@gmail.com"><img src="mail.webp" id="Image48" alt="" width="27" height="27"></a>
 </div>
 </div>
@@ -430,7 +368,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="wb_LayoutGrid64">
 <div id="LayoutGrid64">
 <div class="col-1">
-<div id="wb_Image27" style="display:inline-block;width:45px;height:55px;z-index:55;">
+<div id="wb_Image27" style="display:inline-block;width:45px;height:55px;z-index:42;">
 <img src="sachiv.webp" id="Image27" alt="" title="sachiv" width="45" height="55">
 </div>
 </div>
@@ -446,7 +384,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 </div>
 <div class="col-3">
-<div id="wb_Image46" style="display:inline-block;width:100%;height:auto;z-index:59;">
+<div id="wb_Image46" style="display:inline-block;width:100%;height:auto;z-index:46;">
 <a href="https://wa.link/9ytv0z"><img src="whatsapp.webp" id="Image46" alt="" width="27" height="27"></a>
 </div>
 </div>
@@ -459,7 +397,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="wb_LayoutGrid65">
 <div id="LayoutGrid65">
 <div class="col-1">
-<div id="wb_Image24" style="display:inline-block;width:48px;height:56px;z-index:60;">
+<div id="wb_Image24" style="display:inline-block;width:48px;height:56px;z-index:47;">
 <img src="sastryji.webp" id="Image24" alt="" width="48" height="63">
 </div>
 </div>
@@ -475,17 +413,17 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 </div>
 <div class="col-3">
-<div id="wb_Image47" style="display:inline-block;width:100%;height:auto;z-index:64;">
+<div id="wb_Image47" style="display:inline-block;width:100%;height:auto;z-index:51;">
 <a href="https://wa.me/919977159957?text=Ramswaroop%20Shastri"><img src="whatsapp.webp" id="Image47" alt="" width="27" height="27"></a>
 </div>
 </div>
 <div class="col-4">
-<div id="wb_Image42" style="display:inline-block;width:100%;height:auto;z-index:65;">
+<div id="wb_Image42" style="display:inline-block;width:100%;height:auto;z-index:52;">
 <a href="https://www.facebook.com/ramswaroop.shastri.7/"><img src="images/facebook.png" id="Image42" alt="" width="27" height="27"></a>
 </div>
 </div>
 <div class="col-5">
-<div id="wb_Image43" style="display:inline-block;width:100%;height:auto;z-index:66;">
+<div id="wb_Image43" style="display:inline-block;width:100%;height:auto;z-index:53;">
 <a href="mailto:ramshastri691@gmail.com"><img src="mail.webp" id="Image43" alt="" width="27" height="27"></a>
 </div>
 </div>
@@ -500,28 +438,28 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="LayoutGrid63">
 <div class="row">
 <div class="col-1">
-<div id="wb_Icon71" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:93;">
+<div id="wb_Icon71" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:80;">
 <a href="https://www.facebook.com/groups/213850319729929/?mibextid=NSMWBT"><div id="Icon71"><i class="fa fa-facebook"></i></div></a>
 </div>
-<div id="wb_Icon72" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:94;">
+<div id="wb_Icon72" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:81;">
 <a href="https://whatsapp.com/channel/0029VaAh6dJIyPtMwZVazA3Y"><div id="Icon72"><i class="fa fa-whatsapp"></i></div></a>
 </div>
-<div id="wb_Icon5" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:95;">
+<div id="wb_Icon5" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:82;">
 <a href="https://youtube.com/@Lodha-Samaj_Shiksha-Foundation"><div id="Icon5"><i class="fa fa-youtube"></i></div></a>
 </div>
-<div id="wb_Icon1" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:96;">
+<div id="wb_Icon1" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:83;">
 <a href="https://goo.gl/maps/KQxdXSRqMKv3AspVA"><div id="Icon1"><i class="fa fa-map-marker"></i></div></a>
 </div>
-<div id="wb_Icon65" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:97;">
+<div id="wb_Icon65" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:84;">
 <a href="https://www.reddit.com/r/lodhasamaj/"><div id="Icon65"><i class="fa fa-reddit-alien"></i></div></a>
 </div>
-<div id="wb_Icon67" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:98;">
+<div id="wb_Icon67" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:85;">
 <a href="mailto:lodhasamajshiksha@gmail.com"><div id="Icon67"><i class="fa fa-google-plus"></i></div></a>
 </div>
-<div id="wb_Icon68" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:99;">
+<div id="wb_Icon68" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:86;">
 <a href="https://t.me/lodhasamaj21"><div id="Icon68"><i class="fa fa-telegram"></i></div></a>
 </div>
-<div id="wb_Icon70" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:100;">
+<div id="wb_Icon70" style="display:inline-block;width:22px;height:32px;text-align:center;z-index:87;">
 <a href="https://www.linkedin.com/in/lodha-samaj-shiksha-foundation-766804285"><div id="Icon70"><i class="fa fa-linkedin"></i></div></a>
 </div>
 </div>
@@ -545,7 +483,8 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <script src="js/jquery.ui.effect.min.js"></script>
 <script src="js/searchindex.js"></script>
 <script src="js/wb.sitesearch.min.js"></script>
-<script src="js/study-material.js"></script>
+<script src="js/vision-mission-objectives.js"></script>
+
 <script data-goatcounter="https://6264390100.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </body>
