--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Lodha Samaj Shiksha Foundation | LSSF</title>
+<title>Lodha Samaj Shiksha Foundation</title>
 <meta name="description" content="लोधा समाज शिक्षा फाउंडेशन
 ।। एक कल्पवृक्ष, जो  संभावनाओ को साकार करे ।।  
 We are dedicated to empower people with the tools and knowledge they need to reach their full potential. 
@@ -39,19 +39,26 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <!-- Insert Google Analytics code here -->
 <meta name="yandex-verification" content="3beaa3efd4337d6d" />
 
+
+
 <link href="16x16.png" rel="icon" sizes="16x16" type="image/png">
 <link href="32x32.png" rel="icon" sizes="32x32" type="image/png">
 <link href="64x64.png" rel="icon" sizes="64x64" type="image/png">
-<link href="logo152x152.png" rel="apple-touch-icon" sizes="152x152">
-<link href="logo167x167.png" rel="apple-touch-icon" sizes="167x167">
-<link href="logo180x180.png" rel="apple-touch-icon" sizes="180x180">
-<link href="logo512x512.png" rel="apple-touch-icon" sizes="512x512">
+<link href="Asset152x.png" rel="apple-touch-icon" sizes="152x152">
+<link href="Asset167x.png" rel="apple-touch-icon" sizes="167x167">
+<link href="Asset180x.png" rel="apple-touch-icon" sizes="180x180">
 <link href="css/font-awesome.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Gotu&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Arya&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Comic+Neue&display=swap" rel="stylesheet">
-<link href="css/LN_phase12.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Yatra+One:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gotu:400&subset=devanagari,latin-ext&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Arya:400&subset=devanagari&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Comic+Neue:400,700,300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Zen+Loop:400&subset=latin-ext&display=swap" rel="stylesheet">
+<link href="css/LN_phase13.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
+<link rel="stylesheet" href="magnificpopup/magnific-popup.css">
+<link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.4.css">
+
+<!-- Clarity tracking code for https://lodhasamajshikshafoundation.netlify.app/ --><script>    (function(c,l,a,r,i,t,y){        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);    })(window, document, "clarity", "script", "j6gu2qg8e2");</script>
 
 </head>
 <body>
@@ -1168,7 +1175,19 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 </div>
 </div>
-
+<link href="16x16.png" rel="icon" sizes="16x16" type="image/png">
+<link href="32x32.png" rel="icon" sizes="32x32" type="image/png">
+<link href="64x64.png" rel="icon" sizes="64x64" type="image/png">
+<link href="logo152x152.png" rel="apple-touch-icon" sizes="152x152">
+<link href="logo167x167.png" rel="apple-touch-icon" sizes="167x167">
+<link href="logo180x180.png" rel="apple-touch-icon" sizes="180x180">
+<link href="logo512x512.png" rel="apple-touch-icon" sizes="512x512">
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gotu&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Arya&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Comic+Neue&display=swap" rel="stylesheet">
+<link href="css/LN_phase12.css" rel="stylesheet">
+<link href="css/index.css" rel="stylesheet">
 <div id="preloader"></div>
 <script src="js/jquery-3.6.4.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
@@ -1176,6 +1195,8 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <script src="js/searchindex.js"></script>
 <script src="js/wb.sitesearch.min.js"></script>
 <script src="js/index.js"></script>
+<script data-goatcounter="https://6264390100.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 
 </body>
 </html>
