--- a/Others-career.html
+++ b/Others-career.html
@@ -210,10 +210,7 @@
 <div id="wb_Image2" style="display:inline-block;width:100%;height:auto;z-index:15;">
 <a href="./CBSE.html"><img src="images/cbseee.jpg" id="Image2" alt="" title="CBSE"></a>
 </div>
-<div id="wb_Heading23" style="display:inline-block;width:100%;z-index:16;">
-<h2 id="Heading23"><a href="./Events-Workshop.html">Financial Advices</a></h2>
-</div>
-<iframe width='100%' height='300' src="https://docs.google.com/document/d/e/2PACX-1vTnx0vq8nxsTGf3v-nh4CsmFoue_USVLn9c_07bZPfBLBfaJE-RnmwKcvdKZhB51vCr-Jyqwh8UIY_O/pub?embedded=true"></iframe>
+docs.google.com/document/d/e/2PACX-1vTMCWqXM4wEzSYJu493GJkwxrCeOsYOugsRXybjIvVhO54Un601ybY8-8-ZzJpstmd42-QfeCt02PPj/pub?embedded=true"></iframe>
 </div>
 </div>
 </div>
@@ -240,9 +237,9 @@
 <a href="./CBSE.html"><img src="images/cbseee.jpg" id="Image3" alt="" title="CBSE"></a>
 </div>
 <div id="wb_Heading29" style="display:inline-block;width:100%;z-index:23;">
-<h2 id="Heading29"><a href="./Events-Workshop.html">Study Abroad</a></h2>
+<h2 id="Heading29"><a href="./Others-career.html">Study Abroad</a></h2>
 </div>
-<iframe width='100%' height='300' src="https://docs.google.com/document/d/e/2PACX-1vRUWxBtpXrgV3cd4XaaNs30DR-scpppY5uYLMqkp1M2pdy5L0taaolTch5IqfHYbnSRM4I1_SAZkXZ5/pub?embedded=true"></iframe>
+<iframe width='100%' height='300' src="https://docs.google.com/document/d/e/2PACX-1vTaF6d4hEUO7LwORLfT8qKT1YFtfP44y6ZszuWsA2kYhSzxNDyAdNZ5sb6-K1Z6zGSS7oKDXSFlhyfr/pub?embedded=true"></iframe>
 </div>
 </div>
 </div>
@@ -269,9 +266,9 @@
 <a href="./CBSE.html"><img src="images/cbseee.jpg" id="Image5" alt="" title="CBSE"></a>
 </div>
 <div id="wb_Heading30" style="display:inline-block;width:100%;z-index:30;">
-<h2 id="Heading30"><a href="./Events-Workshop.html">Work Abroad</a></h2>
+<h2 id="Heading30"><a href="./Others-career.html">Work Abroad</a></h2>
 </div>
-<iframe width='100%' height='300' src="https://docs.google.com/document/d/e/2PACX-1vQW5k0iEoSoqMy32BlJW7WvFsyNtgrKHFmRTNXYMZU5yN0sO-656qDjD-kM3b5QY9LYBmKs_5eYtzxa/pub?embedded=true"></iframe>
+<iframe width='100%' height='300' src="https://docs.google.com/document/d/e/2PACX-1vRXXe0IcgKQyyTd_yv8evNeMnFzoCe5OzODIq0hCVph4Ltp7J9d33jjDnHzP-bYk1LGHTDowNL1Xbpm/pub?embedded=true"></iframe>
 </div>
 </div>
 </div>
@@ -298,9 +295,9 @@
 <a href="./CBSE.html"><img src="images/cbseee.jpg" id="Image6" alt="" title="CBSE"></a>
 </div>
 <div id="wb_Heading31" style="display:inline-block;width:100%;z-index:37;">
-<h2 id="Heading31"><a href="./Events-Workshop.html">Hobbies</a></h2>
+<h2 id="Heading31"><a href="./Others-career.html">Hobbies</a></h2>
 </div>
-<iframe width='100%' height='300' src="https://docs.google.com/document/d/e/2PACX-1vTVFqFQiDZboEwekrrkklMokTrCDblEVvISJwK--VL0i2ySc0O9dDGO4RcnHSaTvNF-UbtBiFIe4Val/pub?embedded=true"></iframe>
+<iframe width='100%' height='300' src="https://docs.google.com/document/d/e/2PACX-1vRuxb1vwQH69XjuBJtSRYCdZs7hLvikQymVL5XVo-X5FIi6x-vcebohRzkppMD-QWamXLl5IRdDzChp/pub?embedded=true"></iframe>
 </div>
 </div>
 </div>
@@ -327,9 +324,9 @@
 <a href="./CBSE.html"><img src="images/cbseee.jpg" id="Image7" alt="" title="CBSE"></a>
 </div>
 <div id="wb_Heading32" style="display:inline-block;width:100%;z-index:44;">
-<h2 id="Heading32"><a href="./Exams-Jobs.html">Others</a></h2>
+<h2 id="Heading32"><a href="./Others-career.html">Others</a></h2>
 </div>
-<iframe width='100%' height='300' src="https://docs.google.com/document/d/e/2PACX-1vSJ-rnvWbgGeUaAyeETrz1eVAve_u_ajmvwI9QnEjwP6dMbyUsjSC4p91n1YbDwsG9qZ6uLXqeZiuyR/pub?embedded=true"></iframe>
+<iframe width='100%' height='300' src="https://docs.google.com/document/d/e/2PACX-1vSyP_BnX__1EUwdOF4fdZlje7luty6iyoSAAtFaS7KteKSlKNxtdvI-e0sql9IYGGpuiAHkodmA3fym/pub?embedded=true"></iframe>
 </div>
 </div>
 </div>
