--- a/study-material.html
+++ b/study-material.html
@@ -212,13 +212,13 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="LayoutGrid12">
 <div class="col-1">
 <div id="wb_Heading2" style="display:inline-block;width:100%;z-index:16;">
-<h2 id="Heading2">CBSE</h2>
+<h2 id="Heading2"><a href="./CBSE.html" target="_blank">CBSE</a></h2>
 </div>
 <div id="wb_Image6" style="display:inline-block;width:100%;height:auto;z-index:17;">
 <a href="./CBSE.html"><img src="images/cbseee.jpg" id="Image6" alt="" title="CBSE"></a>
 </div>
 <div id="wb_Image5" style="display:inline-block;width:100%;height:auto;z-index:18;">
-<img src="cbse.webp" id="Image5" alt="" width="906" height="530">
+<a href="./CBSE.html" target="_blank"><img src="cbse.webp" id="Image5" alt="" width="906" height="530"></a>
 </div>
 </div>
 </div>
@@ -246,13 +246,13 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading3" style="display:inline-block;width:100%;z-index:20;">
-<h2 id="Heading3">MP Board</h2>
+<h2 id="Heading3"><a href="./MP-board.html" target="_blank">MP Board</a></h2>
 </div>
 <div id="wb_Image3" style="display:inline-block;width:100%;height:auto;z-index:21;">
 <a href="./MP-board.html"><img src="images/iuhqkenl.png" id="Image3" alt="" title="MP"></a>
 </div>
 <div id="wb_Image7" style="display:inline-block;width:100%;height:auto;z-index:22;">
-<img src="mpboard.webp" id="Image7" alt="" width="906" height="612">
+<a href="./MP-board.html" target="_blank"><img src="mpboard.webp" id="Image7" alt="" width="906" height="612"></a>
 </div>
 </div>
 </div>
