--- a/Committee.html
+++ b/Committee.html
@@ -287,6 +287,14 @@
 </div>
 </div>
 </div>
+<div id="wb_LayoutGrid17">
+   <div id="LayoutGrid17">
+   <div class="row">
+   <div class="col-1">
+   </div>
+   </div>
+   </div>
+   </div>
 </div>
 <div class="col-2">
 <div id="wb_LayoutGrid24">
