--- a/Committee.html
+++ b/Committee.html
@@ -199,7 +199,7 @@
 <div id="LayoutGrid56">
 <div class="row">
 <div class="responsive-google-slides">
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQrC9cFF-dpaJXc5SLZbLWLxQgBt_1KlajXideUy4ZbW9pXnLAOGj3JBOmUUS7rXmF0sEPlbaZqRPfL/embed?start=true&loop=true&delayms=2000" frameborder="0" width="405" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQrC9cFF-dpaJXc5SLZbLWLxQgBt_1KlajXideUy4ZbW9pXnLAOGj3JBOmUUS7rXmF0sEPlbaZqRPfL/embed?start=true&loop=true&delayms=2000" frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 
 
