--- a/Committee.html
+++ b/Committee.html
@@ -302,7 +302,7 @@
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading6" style="display:inline-block;width:100%;z-index:24;">
-<h2 id="Heading6"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTx_KvJp8yEVE2S-Ybf9ynN5OeH38I4DaUDHWi6zryhnAKFfwstzPVLxLo9IMfQHJu3Lo8638sl_LEa/pubhtml?gid=1551270807&single=true">Become a Help Provider <br>(Google Form 📝)</a></h2>
+<h2 id="Heading6"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfW55fHa7jLXLPQewiiSu41C95lDeWLzFchXzBlJxyG3phLNQ/viewform?usp=sf_link">Become a Help Provider <br>(Google Form 📝)</a></h2>
 </div>
 </div>
 </div>
