--- a/Our-partners.html
+++ b/Our-partners.html
@@ -235,7 +235,7 @@
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading40" style="display:inline-block;width:100%;z-index:20;">
-<h2 id="Heading40"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQtHgCPKFJjMmXboTRJ1WDsiFjH2ECbfkpBM23TlPKSIdtd3TTrK-T9K1hkbXT08pwjkrGnDRJMUDki/pubhtml?gid=1180570702&single=true">National Level (राष्ट्रीय समिति)</a></h2>
+<h2 id="Heading40"><a href="https://docs.google.com/spreadsheets/d/1Rshp2girzHWtey31agQDI2RvKcpMC1VLj4yoXLtCWcU/edit?usp=sharing">National Level (राष्ट्रीय समिति)</a></h2>
 </div>
 </div>
 </div>
@@ -254,7 +254,7 @@
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading4" style="display:inline-block;width:100%;z-index:22;">
-<h2 id="Heading4"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQtHgCPKFJjMmXboTRJ1WDsiFjH2ECbfkpBM23TlPKSIdtd3TTrK-T9K1hkbXT08pwjkrGnDRJMUDki/pubhtml?gid=1180570702&single=true">State Level (प्रदेश समिति)</a></h2>
+<h2 id="Heading4"><a href="https://docs.google.com/spreadsheets/d/1kNlplmWAJ3OKTf4Y3Cqnh6Igeqk0I4YbQjBouQw1xSM/edit?usp=sharing">State Level (प्रदेश समिति)</a></h2>
 </div>
 </div>
 </div>
