--- a/Our-partners.html
+++ b/Our-partners.html
@@ -235,7 +235,7 @@
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading40" style="display:inline-block;width:100%;z-index:20;">
-<h2 id="Heading40"><a href="https://docs.google.com/spreadsheets/d/1Rshp2girzHWtey31agQDI2RvKcpMC1VLj4yoXLtCWcU/edit?usp=sharing">National Level (राष्ट्रीय समिति)</a></h2>
+<h2 id="Heading40"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQMBtRt_OnolH5shlvNUyCKnNssrQ-FjHR8h35LhUKrSD02--6q9ZmvEqvtQV97OB24Sq3KkypM-2pb/pubhtml">National Level (राष्ट्रीय समिति)</a></h2>
 </div>
 </div>
 </div>
@@ -254,7 +254,7 @@
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading4" style="display:inline-block;width:100%;z-index:22;">
-<h2 id="Heading4"><a href="https://docs.google.com/spreadsheets/d/1kNlplmWAJ3OKTf4Y3Cqnh6Igeqk0I4YbQjBouQw1xSM/edit?usp=sharing">State Level (प्रदेश समिति)</a></h2>
+<h2 id="Heading4"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSX-Z8fRiEOKFwko4YCmdRngD1nLEGyvGK6MeRuSm1vvlPweuTYk1EeXvjVigwgTnzPcdvVYPqSZYCL/pubhtml">State Level (प्रदेश समिति)</a></h2>
 </div>
 </div>
 </div>
@@ -273,7 +273,7 @@
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading5" style="display:inline-block;width:100%;z-index:24;">
-<h2 id="Heading5"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQtHgCPKFJjMmXboTRJ1WDsiFjH2ECbfkpBM23TlPKSIdtd3TTrK-T9K1hkbXT08pwjkrGnDRJMUDki/pubhtml?gid=1180570702&single=true">District Level (जिला समिति)</a></h2>
+<h2 id="Heading5"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQJtjWtd6XUMuTbSDrFzZi811gbaq7T0lmAeMVCAtXoX7D4yj0iWBjXu16NrfZ50JmKV0EXJNhyWU7J/pubhtml">District Level (जिला समिति)</a></h2>
 </div>
 </div>
 </div>
@@ -292,7 +292,7 @@
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading6" style="display:inline-block;width:100%;z-index:26;">
-<h2 id="Heading6"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQtHgCPKFJjMmXboTRJ1WDsiFjH2ECbfkpBM23TlPKSIdtd3TTrK-T9K1hkbXT08pwjkrGnDRJMUDki/pubhtml?gid=1180570702&single=true">Block Level (ब्लाक समिति)</a></h2>
+<h2 id="Heading6"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQN3SMAnhfIxgrhFfN53Uo1XfTAz8C8MyGqhCizHu3Ahs04L8xSQuWWkd73MSgwvQlY7FmWn6EyQ-FB/pubhtml">Block Level (ब्लाक समिति)</a></h2>
 </div>
 </div>
 </div>
@@ -311,7 +311,7 @@
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading3" style="display:inline-block;width:100%;z-index:28;">
-<h2 id="Heading3"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQtHgCPKFJjMmXboTRJ1WDsiFjH2ECbfkpBM23TlPKSIdtd3TTrK-T9K1hkbXT08pwjkrGnDRJMUDki/pubhtml?gid=1180570702&single=true">Local Level (स्थानीय समूह)</a></h2>
+<h2 id="Heading3"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTZ1xeUEgJt1nVnXhvndy71of7LLvwqyhFtunLNt76oKKcxnBtsjhX-RG_-7yRm7DfomDiYqILWSnfQ/pubhtml">Local Level (स्थानीय समूह)</a></h2>
 </div>
 </div>
 </div>
@@ -334,7 +334,7 @@
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading7" style="display:inline-block;width:100%;z-index:49;">
-<h2 id="Heading7"><a href="https://docs.google.com/forms/d/e/1FAIpQLScXL7kl6X6uj2kfPwfq8Y281Yo_ff69PlM6s9xtUykpyRrNNg/viewform?usp=sf_link" target="_blank">अन्य / Other <br>Organisations, Institutes, Companies</a></h2>
+<h2 id="Heading7"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTrQqT7trkwkgykYiEqaROGaFJwWvzcWPcSUfnLXkLFYno-8pdxN4Psd0z3KjB53ti7oKh2IG64NUXJ/pubhtml">अन्य / Other <br>Organisations, Institutes, Companies</a></h2>
 </div>
 <div id="wb_Image5" style="display:inline-block;width:100%;height:auto;z-index:50;">
 <a href="./MP-board.html"><img src="images/iuhqkenl.png" id="Image5" alt="" title="MP"></a>
